--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
             <h3 class="center bounceInRight animated center">Front End Web || Android Developer</h3>
             </div>
             <div class="center">
-               <a href="#bio"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a>
+                <ul id="myMenu">
+                    <li data-menuanchor="fish"><a href="#fish"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a></li>
+                </ul>
             </div>
         </div>
         </div>
-        <div class="section">
+        <div id="fish" class="section">
                         <div id="bio" class="slide">
                             <div class="container">
                             <div class="row">
@@ -173,23 +175,30 @@
             </div>
         </div>
 <!--        Footer-->
-<footer class="section">
+        <div id="last" class="section">
+                <div class="row">
+                    <div class="col s12">
+                        <p class="center">&copy; Copyright 2016 MartMwangi</p>
+                    </div>
+                </div>
+        </div>
+<!--
+<div class="section">
+<footer class="section page-footer">
 <div class="container">
     <div class="row">
-    <div class="col s12"></div>
-        <div class="footer-copyright">
+    <div class="col s12">
+         <div class="footer-copyright">
             <div class="container">
              <p class="center">&copy; Copyright 2016 MartMwangi</p>
             </div>
         </div>
+        </div>
     </div>
     </div>
 </footer>
-
-
-
-
-
+</div>
+-->
 
 <!--
      <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
