fIXED landing page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="center">
                 <ul id="myMenu">
-                    <li data-menuanchor="fish"><a href="#fish"><i class="fa fa-angle-down fa-5x hvr-grow"></i></a></li>
+                    <li data-menuanchor="fish"><a href="#fish">Luc</a></li>
                 </ul>
             </div>
         </div>
