--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!Doctype html>
 <html>
 <head><title></title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link rel="stylesheet" href="css/materialize.css">
@@ -59,6 +61,7 @@
                                     <div class="card knees">
                                         <div class="card-content">
                                             <h3 class="center">Bio</h3>
+                                            <p class="fresh">
                                             Hi,call me Mart, passionate about front-end web development and<br> also very passionate
                                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                                 Rock climbing,Reading African Literature and wildlife.<br>
@@ -68,7 +71,7 @@
                                              <div class="chip">JS</div>
                                              <div class="chip">Python</div>
                                              <div class="chip">Android</div>
-
+                                            </p>
                                         </div>
 
                                     </div>
@@ -130,7 +133,7 @@
                  <div class="row">
                      <form class="col s12" action="http://formspree.io/martmwangi86@gmail.com" method="post" id="myform">
                          <div class="row">
-                             <h3 class="cont">Contact</h3>
+                             <h3 class="center cont">Contact</h3>
                              <div class="input-field col s6">
                                  <i class="material-icons prefix">account_circle</i>
                                  <input id="full_name" type="text" class="validate" name="name">
