Changed nasi travels to the portfolio

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                                                </div>
                                       <div class="col s4 img">
-                            <a href="http://gnome254.bitballoon.com" target="_blank"><img src="images/single.png" height="200px" width="100%"></a>
+                            <a href="nasi254.bitballoon.com" target="_blank"><img src="images/Nasi.png" height="200px" width="100%"></a>
                                                </div>
                                                <div class="col s4 img">
                                                   <a href="http://gnome254.bitballoon.com" target="_blank"><img  src="images/gnome.png" height="200px" width="100%"></a>
