--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head><title></title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-      <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-      <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -33,6 +33,10 @@
     <script type="text/javascript" src="fullPage.js-master/jquery.fullPage.js"></script>
 
 
+<!--    For texillate js-->
+    <script src="https://raw.githubusercontent.com/davatron5000/Lettering.js/master/jquery.lettering.js"></script>
+
+
     </head>
 
     <body>
@@ -44,7 +48,7 @@
                             <h2 class="center name">Martin Mwangi</h2>
                     </div>
             <div>
-            <h3 class="center bounceInRight animated center">Front End Web || Android Developer</h3>
+            <h3 class="center tlt" data-in-effect="fadeIn">Front End Web || Android Developer</h3>
             </div>
             <div class="center">
                 <ul id="myMenu">
@@ -185,35 +189,7 @@
                     </div>
                 </div>
         </div>
-<!--
-<div class="section">
-<footer class="section page-footer">
-<div class="container">
-    <div class="row">
-    <div class="col s12">
-         <div class="footer-copyright">
-            <div class="container">
-             <p class="center">&copy; Copyright 2016 MartMwangi</p>
-            </div>
-        </div>
-        </div>
-    </div>
-    </div>
-</footer>
-</div>
--->
 
-<!--
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
-    <script src="http://use.edgefonts.net/alex-brush:n4:all;bad-script:n4:all.js"></script>
-    <script src="http://use.edgefonts.net/architects-daughter:n4:all;bad-script:n4:all.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
--->
-
-               <script>
-
-			</script>
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="text/javascript" src="js/materialize.js"></script>
