Lettering.js issue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 <!--    For texillate js-->
-    <script src="https://raw.githubusercontent.com/davatron5000/Lettering.js/master/jquery.lettering.js"></script>
+    <script src="js/jquery.lettering.js"></script>
 
 
     </head>
