--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                              <div class="container">
                              <div class="row">
                                  <div class="col s12">
-                                    <button class="btn waves-effect waves-light conts" type="submit" name="action" value="send"                                                               id="submit">Submit
+                                    <button class="btn waves-effect waves-light conts modal-trigger" type="submit" name="action" value="send"                                                               id="submit" href="#modal1">Submit
                                         <i class="material-icons right"></i>
                                     </button>
 
@@ -181,6 +181,15 @@
             </div>
             </div>
         </div>
+    !-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Thanks for your time, will get back to you shortly</h4>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Back</a>
+    </div>
+  </div>
 <!--        Footer-->
         <div id="last" class="section">
                 <div class="row">
