--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                              <h3 class="center cont">Contact</h3>
                              <div class="input-field col s6">
                                  <i class="material-icons prefix">account_circle</i>
-                                 <input id="full_name" type="text" class="validate" name="name">
+                                 <input id="full_name" type="text" class="validate white" name="name">
                                  <label for="first_name">Full name</label>
                              </div>
 
                              <div class="row">
                              <div class="input-field col s6">
                                    <i class="material-icons prefix">email</i>
-                                 <input id="email" type="text" class="validate" name="_replyto: ">
+                                 <input id="email" type="text" class="validate white" name="_replyto: ">
                                  <label for="email">Email</label>
                                  </div>
                              </div>
