--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
     <body>
         <header></header>
+           <!--        Footer-->
+        <div id="footer">
+            &copy; Copyright 2016 MartMwangi
+        </div>
     <div id="fullpage">
            <div id="landing" class="section active" data-anchor="firstSection">
                 <div class="container" id="profiling">
@@ -188,17 +192,8 @@
 
             </div>
             </div>
-        </div>
-<!--        Footer-->
-        <div id="last" class="section">
-            <div class="container">
-                <div class="row">
-                <div class="col s12">
-                <p id="copy" class="center">&copy; Copyright 2016 MartMwangi</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
+
 
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
