--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
                         </ul>
                     </div>
              </div>
-
-
         </div>
         </div>
         <div id="section1" class="section" data-anchor="secondSection">
@@ -78,7 +76,7 @@
                                         <div class="card-content">
                                             <h3 class="center">Bio</h3>
                                             <p class="fresh">
-                                            Hi,call me Mart, passionate about front-end web development and<br> also very passionate
+                                            Hi, call me Mart, passionate about front-end web development and<br> also very passionate
                                 in creating mobile applications.<br> Any activity that involves tech am always interested. I also enjoy
                                 Rock climbing,Reading African Literature and wildlife.<br>
                                             <h4 class="center">Skills</h4>
@@ -175,7 +173,7 @@
                              <div class="container">
                              <div class="row">
                                  <div class="col s12">
-                                    <button class="btn waves-effect waves-light conts modal-trigger" type="submit" name="action" value="send"                                                               id="submit" href="#modal1">Submit
+                                    <button class="btn waves-effect waves-light conts modal-trigger" type="submit" name="action" value="send"                                                               id="submit" >Submit
                                         <i class="material-icons right"></i>
                                     </button>
 
@@ -185,7 +183,7 @@
                                  </div>
 
                          </div>
-                        <input type="hidden" name="_next" value="//martmwangi.github.io" />
+                        <input type="hidden" name="_next" value="//http://martmwangi.github.io/#secondPage/thirdSlide" />
                      </form>
                 </div>
                 </div>
