--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <!--    For the favicon-->
      <link rel="icon" href="/images/favicon.ico">
-
 
      <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="pwstabs-master/assets/jquery.pwstabs.js"></script>
@@ -34,16 +32,15 @@
 
 
 <!--    For texillate js-->
-    <script src="js/jquery.lettering.js"></script>
-
-
+    <script src="js/jquery.lettering.js" type="text/javascript"></script>
+    <script src="js/jquery.textillate.js" type="text/javascript"></script>
     </head>
 
     <body>
         <header></header>
            <!--        Footer-->
         <div id="footer">
-            &copy; Copyright 2016 MartMwangi
+            &copy; Copyright 2016 MartMwangi              <a href="#landing"><i class="fa fa-arrow-circle-up"></i></a>
         </div>
     <div id="fullpage">
            <div id="landing" class="section active" data-anchor="firstSection">
