Edited form submit behaviour

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
         <header></header>
            <!--        Footer-->
         <div id="footer">
-            &copy; Copyright 2016 MartMwangi              <a href="#landing"><i class="fa fa-arrow-circle-up"></i></a>
+            &copy; Copyright 2016 MartMwangi
+            <div class="container">
+                    <ul id="menu">
+                <li data-menuanchor="firstSection">
+                     <a href="#firstSection"><i class="fa fa-arrow-circle-up bounceInUp animated"></i></a>
+                </li>
+            </ul>
+            </div>
+
+
         </div>
     <div id="fullpage">
            <div id="landing" class="section active" data-anchor="firstSection">
@@ -180,7 +189,7 @@
                                  </div>
 
                          </div>
-                        <input type="hidden" name="_next" value="//http://martmwangi.github.io/#secondPage/thirdSlide" />
+                        <input type="hidden" name="_next" value="http://martmwangi.github.io/#secondPage/thirdSlide" />
                      </form>
                 </div>
                 </div>
