Fixed bug with the form

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                  </div>
 
                          </div>
-                        <input type="hidden" name="_next" value="http://martmwangi.github.io/#secondPage/thirdSlide" />
+                        <input type="hidden" name="_next" value="//martmwangi.github.io" />
                      </form>
                 </div>
                 </div>
