Fixed remaining bugs

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <!--    For the favicon-->
      <link rel="icon" href="/images/favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
      <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="pwstabs-master/assets/jquery.pwstabs.js"></script>
