--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    
 
 <!--    For the favicon-->
      <link rel="icon" href="/images/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <!--    For the toast effect-->
+    <link rel="stylesheet" href="jquery.m.toast/src/jquery.m.toast.css">
+
+    
 
      <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="pwstabs-master/assets/jquery.pwstabs.js"></script>
@@ -46,6 +51,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!--    For texillate js-->
     <script src="js/jquery.lettering.js" type="text/javascript"></script>
     <script src="js/jquery.textillate.js" type="text/javascript"></script>
+
+
     </head>
 
     <body>
@@ -191,7 +198,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                              <div class="container">
                              <div class="row">
                                  <div class="col s12">
-                                    <button class="btn waves-effect waves-light conts modal-trigger" type="submit" name="action" value="send"                                                               id="submit" >Submit
+<button class="btn waves-effect waves-light conts modal-trigger" type="submit" name="action" value="send" id="btn1">Submit
                                         <i class="material-icons right"></i>
                                     </button>
 
@@ -214,6 +221,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="text/javascript" src="js/materialize.js"></script>
+    <script type="text/javascript" src="jquery.m.toast/src/jquery.m.toast.js"></script>
+    <script>
+        $(function (){
+            $('button').click(function(){
+                var id = $(this).attr('id');
+                if(id ==  'btn1')
+                    $.toast('Thanks, will get bact to you very soon',{'duration':1000,'type':'success','align':'bottom'})
+            })
+        })            
+    </script>
     <script>
         $('a[href*=#]:not([href=#])').click(function() {
     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
