Changed repo url

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                              <div class="row">
                              <div class="input-field col s6">
                                    <i class="material-icons prefix">email</i>
-                                 <input id="email" type="text" class="validate" name="_replyto:">
+                                 <input id="email" type="email" class="validate" name="_replyto:">
                                  <label for="email">Email</label>
                                  </div>
                              </div>
@@ -203,7 +203,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                     </button>
 
                                  </div>
-
                                  </div>
                                  </div>
 
