Made form inputs a must to fill

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                              <h3 class="center cont">Contact</h3>
                              <div class="input-field col s6">
                                  <i class="material-icons prefix">account_circle</i>
-                                 <input id="full_name" type="text" class="validate" name="name">
+                                 <input id="full_name" type="text" class="validate" name="name" required>
                                  <label for="first_name">Full name</label>
                              </div>
 
                              <div class="row">
                              <div class="input-field col s6">
                                    <i class="material-icons prefix">email</i>
-                                 <input id="email" type="email" class="validate" name="_replyto:">
+                                 <input id="email" type="email" class="validate" name="_replyto:" required>
                                  <label for="email">Email</label>
                                  </div>
                              </div>
@@ -190,7 +190,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                  <div class="row">
                                  <div class="input-field col s12">
                                      <i class="material-icons prefix">message</i>
-                                      <textarea id="message" class="materialize-textarea" name="message"></textarea>
+                                      <textarea id="message" class="materialize-textarea" name="message" required></textarea>
                                      <label for="message">Message</label>
                                      </div>
                                  </div>
