Removed toast folder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!--    For the toast effect-->
-    <link rel="stylesheet" href="jquery.m.toast/src/jquery.m.toast.css">
+    <link rel="stylesheet" href="css/jquery.m.toast.css">
 
     
 
@@ -202,7 +202,7 @@
     <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script type="text/javascript" src="js/materialize.js"></script>
-    <script type="text/javascript" src="jquery.m.toast/src/jquery.m.toast.js"></script>
+    <script type="text/javascript" src="js/jquery.m.toast.js"></script>
     <script>
         $(function (){
             $('button').click(function(){
