Reset defaults for toast

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             $('button').click(function(){
                 var id = $(this).attr('id');
                 if(id ==  'btn1')
-                    $.toast('Thanks, will get bact to you very soon',{'duration':1000,'type':'success','align':'bottom'})
+                    $.toast('Thanks, will get bact to you very soon',{'duration':1000,'type':'success'})
             })
         })            
     </script>
